Fix: Change background color for entire document to fill color variable.  This way any extra space will be the correct color instead of white when using dark theme.

--- a/frontend/portfolio-app/src/css/Custom.css
+++ b/frontend/portfolio-app/src/css/Custom.css
@@ -74,8 +74,11 @@
 /* DARK THEME COLORING */
 
 @media (prefers-color-scheme: dark) {
-    body {
+    html {
         background-color: var(--fill-color-dark);
+    }
+
+    body {
         color: var(--text-color-dark);
     }
 
